# an_odd_website_rs

./: Cargo.toml  README.md
scripts/: generate_test_data.sh
src/: main.rs
src/router/: clients.rs  common.rs  employees.rs  exporters.rs  exports.rs  helpers.rs  jobs.rs  mod.rs  routes.rs  settings.rs  website.rs
static/: index.html
static/scripts/: dashboard.js
